# ghc-wasm-graphics

./: README.md  build.sh  flake.nix  ghc-wasm-graphics.cabal  index.html
app/: Main.hs  Mandelbrot.hs
src/: Lib.hs
src/Lib/: Animation.hs
